--- a/Project1/MyForm.resx
+++ b/Project1/MyForm.resx
@@ -150,4 +150,7 @@
         u912YbTx2N4AAAAASUVORK5CYII=
 </value>
   </data>
+  <metadata name="menuStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>91, 17</value>
+  </metadata>
 </root>
